@@ -5,7 +5,8 @@ Changelog
 1.4.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- BugFix: meeting latex shows id instead of fullname.
+  [mathias.leimgruber]
 
 
 1.4.4 (2013-09-20)
